salesforce/force-app/main/default/objects/WFC27_Trip__c/WFC27_Trip__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Trip</label><nameField><displayFormat>TRIP-{000000}</displayFormat><label>Trip Number</label><type>AutoNumber</type></nameField><pluralLabel>WFC27 Trips</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>