salesforce/force-app/main/default/objects/WFC27_Trip__c/fields/Error__c.field-meta.xml
<CustomField><fullName>Error__c</fullName><label>Error</label><length>255</length><type>Text</type></CustomField>