salesforce/force-app/main/default/objects/WFC27_Trip__c/fields/Meta_Count__c.field-meta.xml
<CustomField><fullName>Meta_Count__c</fullName><label>Meta Count</label><precision>7</precision><scale>0</scale><type>Number</type></CustomField>