salesforce/force-app/main/default/objects/WFC27_Trip__c/fields/Packet_ID__c.field-meta.xml
<CustomField><fullName>Packet_ID__c</fullName><label>Packet ID</label><length>255</length><type>Text</type></CustomField>