salesforce/force-app/main/default/objects/WFC27_Trip__c/fields/Received_Count__c.field-meta.xml
<CustomField><fullName>Received_Count__c</fullName><label>Received Count</label><precision>7</precision><scale>0</scale><type>Number</type></CustomField>