salesforce/force-app/main/default/objects/WFC27_Trip__c/fields/Result__c.field-meta.xml
<CustomField><fullName>Result__c</fullName><label>Result</label><length>255</length><type>Text</type></CustomField>