salesforce/force-app/main/default/objects/WFC27_Trip__c/fields/Sent_Count__c.field-meta.xml
<CustomField><fullName>Sent_Count__c</fullName><label>Sent Count</label><precision>7</precision><scale>0</scale><type>Number</type></CustomField>